<resources>
    <string name="app_name">成中医大健康</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cellphone_number">手机号</string>
    <string name="register">注册</string>
    <string name="passwd">密码</string>
    <string name="login">登录</string>
    <string name="loss_passwd">忘记密码</string>
    <string name="service_tel">客服电话:</string>
    <string name="new_user_resgiter">新用户注册</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="is_ok_pd">确认密码</string>
    <string name="coming_register">立即注册</string>
    <string name="tips_register">提示：点击立即注册表示已经同意</string>
    <string name="user_protocol">《用户服务协议》</string>
    <string name="sms_code">短信验证</string>
    <string name="next">下一步</string>
    <string name="is_ok">确认</string>
    <string name="main_page">首页</string>
    <string name="health">健康</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="medical_exam_order">体检订单</string>
    <string name="serivce_order">服务订单</string>
    <string name="security_settings">安全设置</string>
    <string name="common_use">通用</string>
    <string name="share">分享给好友</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="out_line">退出登录</string>
    <string name="medical_appointment">体检预约</string>
    <string name="medical_exam_report">体检报告</string>
    <string name="order_about">订单相关</string>
    <string name="immediate_effect">立即搜索</string>
    <string name="header_icon">头像</string>
    <string name="login_password">登录密码</string>
    <string name="nickname">昵称</string>
    <string name="gestures_unlock">手势解锁</string>
    <string name="not_setting">未设置</string>
    <string name="push_notification">推送通知</string>
    <string name="clear_cache">清除缓存</string>
    <string name="contact_info">联系方式</string>
    <string name="commit">提交</string>
    <string name="htcm">成都中医大健康管理中心</string>
    <string name="check_update">检查更新</string>
    <string name="protocol_explain">协议与说明</string>
    <string name="setting_gestures_code">设置手势密码</string>
    <string name="immediately_certification">立即认证</string>
    <string name="htcm_center">成都中医大健康体检中心</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="id_num">身份证号</string>
    <string name="families_relation">家人关系</string>
    <string name="service_tel_num">400-028-3020</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
