<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cut_off_line_a"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGayLine"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_page_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_page_image"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/main_page_bg" />

            <TextView
                android:id="@+id/main_page_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_page"
                android:textColor="@color/colorThrText"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/health_page_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/health_page_image"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/health_page_bg" />

            <TextView
                android:id="@+id/health_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:textColor="@color/colorThrText"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/find_page_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/find_page_image"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/find_page_bg" />

            <TextView
                android:id="@+id/find_page_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:textColor="@color/colorThrText"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mine_page_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mine_page_image"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/mine_page_bg" />

            <TextView
                android:id="@+id/mine_page_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine"
                android:textColor="@color/colorThrText"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
