<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    android:orientation="vertical"
    tools:context=".views.activitys.SettingActivity">

    <include
        android:id="@+id/title_header_setting"
        layout="@layout/title_bar_type_two_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="48dp">

    </include>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="11dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_settings"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_security_setting"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_use"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_common_use"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_share"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_feedback"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_about"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/out_line_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/out_line"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:background="@color/colorWhite"
        style="?android:attr/borderlessButtonStyle">

    </Button>


</LinearLayout>