<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    android:orientation="vertical"
    tools:context=".module.activitys.AboutActivity">

    <include
        android:id="@+id/title_header_about"
        layout="@layout/title_bar_type_two_layout"/>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="41dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/htcm"
        android:textColor="@color/colorSecText"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"/>
    <TextView
        android:id="@+id/version_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v1.0"
        android:textColor="@color/colorSecText"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="41dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_update"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_check_update"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_explain"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:id="@+id/into_protocol_explain"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>
</LinearLayout>