<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPageBackground"
    tools:context=".module.activitys.FAQActivity">

    <include
        android:id="@+id/title_header_faq"
        layout="@layout/title_bar_type_two_layout">

    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="11dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_appointment"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_exam_report"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_about"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:src="@mipmap/liebiaojinru"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorCutoff"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"></LinearLayout>
    </RelativeLayout>
</LinearLayout>